# Split_Text

./: Cargo.toml  README.md  README_TH.md
file_spliter/: Cargo.toml  README.md  README_TH.md
file_spliter/src/: lib.rs
src/: main.rs  slint_ui.rs  tasks.rs
src/slint_ui/: mod.rs  split_page.rs  youtube_page.rs
ui/: app_window.slint
youtube_subtitle_manager/: Cargo.toml  README.md  README_TH.md
youtube_subtitle_manager/src/: lib.rs
yt_subtitle_download/: Cargo.toml
yt_subtitle_download/src/: lib.rs  models.rs
