[package]
name = "Splite_text"
version = "0.1.0"
edition = "2024"

[dependencies]
file_spliter = { path = "file_spliter" }
yt-transcript-rs = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
tokio = "^1.45.0"
youtube_subtitle_manager = { path = "youtube_subtitle_manager" }
slint = "1.14.1"
reqwest = "0.13.1"
image = "0.25.9"

[build-dependencies]
slint-build = "1.14.1"
